# cpp-webapi-poc

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/: libboost-mongo.Dockerfile
src/: CMakeLists.txt  main.cpp
src/public/: index.html
src/public/script/: index.js
src/public/script/component/: App.js
src/public/style/: index.css
